minor doc updates

--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -2003,7 +2003,7 @@ release/experiment \
 
 \subsubsection{Binarized permutation methods}
 Instead of computing the $L_2$ distance between two permutations,
-we can binarize permutations and computed the Hamming distance between
+we can binarize permutations and compute the Hamming distance between
 binarized permutations. 
 To this end, we select an adhoc binarization threshold \texttt{binThreshold}.
 All integer values smaller than \texttt{binThreshold} become zeros,
@@ -3002,10 +3002,12 @@ If you (re)-use it, please, consider citing the authors:
 \section{Acknowledgements}
 We thank 
 Lawrence Cayton for providing the data sets,
-Daniel Lemire for contributing the implementation of the Schlegel~et~al.~\cite{schlegel2011fast}
-intersection algorithm,
-Nikita Avrelin for implementing the first version of the \knn graph.
-We also thank Andrey Savchenko and Alexander Ponomarenko for suggestions
+Nikita Avrelin for implementing the first version of the \knn graph,
+and Daniel Lemire for contributing 
+the implementation of the original Schlegel~et~al.~\cite{schlegel2011fast}
+intersection algorithm.
+We also thank Andrey Savchenko, Alexander Ponomarenko,
+and anonymous referees for suggestions
 to improve the library and the documentation.
 
 
