1) parameter fix 2) manual fix

--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -1107,7 +1107,7 @@ $L_p$ (generic $p \ge 1$)& \ttt{lp:p=\ldots}, \ttt{lp\_sparse:p=\ldots}  &  0.1-
                                 & $\left(\sum_{i=1}^n |x_i-y_i|^p\right)^{1/p}$  & \\
 \cmidrule(l){1-3} 
 Angular distance & \ttt{angulardist}, \ttt{angulardist\_sparse}, \ttt{angulardist\_sparse\_fast} & { 13, 1.4, 3.5 } \\
-                        & $\arccos\left(1-\frac{\sum_{i=1}^n x_i y_i}{\sqrt{\sum_{i=1}^n x_i^2}\sqrt{\sum_{i=1}^n y_i^2 }}\right)$   & \\
+                        & $\arccos\left(\frac{\sum_{i=1}^n x_i y_i}{\sqrt{\sum_{i=1}^n x_i^2}\sqrt{\sum_{i=1}^n y_i^2 }}\right)$   & \\
 \cmidrule(l){1-3} 
 Jensen-Shan. metr. &\ttt{jsmetrslow, jsmetrfast, jsmetrfastapprox} &  0.3, 1.9, 4.8  \\
                           & $\sqrt{\frac{1}{2}\sum_{i=1}^n \left[x_i \log x_i + y_i \log y_i  - (x_i+y_i)\log \frac{x_i +y_i}{2}\right]}$  & \vspace{1em} \\
@@ -1189,12 +1189,13 @@ d(x,y) =1-\frac{\sum_{i=1}^n x_i y_i}
 {\sqrt{\sum_{i=1}^n x_i^2} \sqrt{\sum_{i=1}^n y_i^2 } } 
 $$ 
 The cosine similarity is not a true metric, but it can be converted into
-one by applying a monotonic transformation (i.e.., taking an inverse cosine).
+one by applying a monotonic transformation (i.e.., subtracting the 
+cosine similarity from one and taking an inverse cosine).
 The resulting distance function is a true metric that 
 is called the angular distance.
 The angular distance is computed using the following formula:
 $$
-d(x,y) =\arccos\left(1-\frac{\sum_{i=1}^n x_i y_i} 
+d(x,y) =\arccos\left(\frac{\sum_{i=1}^n x_i y_i} 
 {\sqrt{\sum_{i=1}^n x_i^2} \sqrt{\sum_{i=1}^n y_i^2 } }\right) 
 $$ 
 
